--- a/engine-ui/packages/console-ui/src/public/stream/index.html
+++ b/engine-ui/packages/console-ui/src/public/stream/index.html
@@ -4,7 +4,7 @@
     <title>DTinsight-流计算</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta charset="utf-8">
-    <link rel="shortcut icon" href="public/stream/favicon.svg">
+    <link rel="Shortcut Icon" href="public/stream/favicon.png">
     <base href="/" />
     <style type="text/css">
         .laoding-wrapper {
