--- a/engine-ui/packages/console-ui/src/public/main/index.html
+++ b/engine-ui/packages/console-ui/src/public/main/index.html
@@ -1,12 +1,12 @@
 <html lang="zh-cn">
 
 <head>
-	<title>DTinsight-数栈</title>
+	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 	<meta charset="utf-8">
     <link rel="Shortcut Icon" href="public/favicon.png">
     <link rel="manifest" href="manifest.json">
-	<base href="/" />
+    <base href="/" />
 	<style type="text/css">
         .laoding-wrapper {
             width: 100%;
@@ -144,7 +144,7 @@
     <div class="root" id="app">
         <div class="laoding-wrapper">
             <div class="loading-center">
-                <h1 class="loading-title">DTinsight 数栈</h1>
+                <h1 class="loading-title"><span id="loading-prefix"></span> 数栈</h1>
                 <div class="bouncywrap">
                     <div class="dotcon dc1">
                         <div class="dot"></div>
@@ -160,6 +160,7 @@
         </div>
     </div>
     <script type="text/javascript" src="/public/main/config/config.js"></script>
+    <script type="text/javascript" src="/public/common/config.js"></script>
     <script>
         if (navigator.serviceWorker!=null) {
                 const version="sw_version_1";
