--- a/engine-ui/packages/console-ui/src/public/rdos/index.html
+++ b/engine-ui/packages/console-ui/src/public/rdos/index.html
@@ -143,7 +143,7 @@
     <div class="root" id="app">
         <div class="laoding-wrapper">
             <div class="loading-center">
-                <h1 class="loading-title">DTinsight 离线计算</h1>
+                <h1 class="loading-title"><span id="loading-prefix"></span> 离线计算</h1>
                 <div class="bouncywrap">
                     <div class="dotcon dc1">
                         <div class="dot"></div>
@@ -159,5 +159,6 @@
         </div>
     </div>
     <script type="text/javascript" src="/public/rdos/config/config.js"></script>
+    <script type="text/javascript" src="/public/common/config.js"></script>
 </body>
 </html>
