--- a/engine-ui/packages/console-ui/src/public/dataApi/index.html
+++ b/engine-ui/packages/console-ui/src/public/dataApi/index.html
@@ -1,11 +1,11 @@
 <html lang="zh-cn">
 
 <head>
-	<title>DTinsight-数据API</title>
+	<title></title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
 	<meta charset="utf-8">
 	<link rel="Shortcut Icon" href="public/dataApi/favicon.png">
-	<base href="/" />
+    <base href="/" />
 	<style type="text/css">
         .laoding-wrapper {
             width: 100%;
@@ -143,7 +143,7 @@
     <div class="root" id="app">
         <div class="laoding-wrapper">
             <div class="loading-center">
-                <h1 class="loading-title">DTinsight API</h1>
+                <h1 class="loading-title"><span id="loading-prefix"></span> API</h1>
                 <div class="bouncywrap">
                     <div class="dotcon dc1">
                         <div class="dot"></div>
@@ -158,7 +158,8 @@
             </div>
         </div>
     </div>
-	<script type="text/javascript" src="/public/dataApi/config/config.js"></script>
+    <script type="text/javascript" src="/public/dataApi/config/config.js"></script>
+    <script type="text/javascript" src="/public/common/config.js"></script>
 </body>
 
 </html>
