perf(public): improve common
separate the runtime in the common file

--- a/engine-ui/packages/console-ui/src/public/dataQuality/index.html
+++ b/engine-ui/packages/console-ui/src/public/dataQuality/index.html
@@ -161,6 +161,7 @@
     </div>
     <script type="text/javascript" src="/public/dataQuality/config/config.js"></script>
     <script type="text/javascript" src="/public/common/config.js"></script>
+    <script type="text/javascript" src="/public/common/index.js"></script>
 </body>
 
 </html>
