--- a/engine-ui/packages/console-ui/src/public/main/index.html
+++ b/engine-ui/packages/console-ui/src/public/main/index.html
@@ -161,6 +161,7 @@
     </div>
     <script type="text/javascript" src="/public/main/config/config.js"></script>
     <script type="text/javascript" src="/public/common/config.js"></script>
+    <script type="text/javascript" src="/public/common/index.js"></script>
     <script>
         if (navigator.serviceWorker!=null) {
                 const version="sw_version_1";
