--- a/engine-ui/packages/console-ui/src/public/analyticsEngine/index.html
+++ b/engine-ui/packages/console-ui/src/public/analyticsEngine/index.html
@@ -160,6 +160,7 @@
     </div>
     <script type="text/javascript" src="/public/analyticsEngine/config/config.js"></script>
     <script type="text/javascript" src="/public/common/config.js"></script>
+    <script type="text/javascript" src="/public/common/index.js"></script>
 </body>
 
 </html>
