--- a/engine-ui/packages/console-ui/src/public/rdos/index.html
+++ b/engine-ui/packages/console-ui/src/public/rdos/index.html
@@ -160,5 +160,6 @@
     </div>
     <script type="text/javascript" src="/public/rdos/config/config.js"></script>
     <script type="text/javascript" src="/public/common/config.js"></script>
+    <script type="text/javascript" src="/public/common/index.js"></script>
 </body>
 </html>
