--- a/engine-ui/packages/console-ui/src/public/dataQuality/index.html
+++ b/engine-ui/packages/console-ui/src/public/dataQuality/index.html
@@ -144,7 +144,7 @@
     <div class="root" id="app">
         <div class="laoding-wrapper">
             <div class="loading-center">
-                <h1 class="loading-title"><span id="loading-prefix"></span> Valid</h1>
+                <h1 class="loading-title"><span id="loading-prefix"></span></h1>
                 <div class="bouncywrap">
                     <div class="dotcon dc1">
                         <div class="dot"></div>
