--- a/engine-ui/packages/console-ui/src/public/rdos/index.html
+++ b/engine-ui/packages/console-ui/src/public/rdos/index.html
@@ -1,7 +1,7 @@
 <html lang="zh-cn">
 
 <head>
-    <title>DTinsight-离线计算</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="public/rdos/favicon.png">
