--- a/engine-ui/packages/console-ui/src/public/rdos/index.html
+++ b/engine-ui/packages/console-ui/src/public/rdos/index.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, minimal-ui">
     <meta charset="utf-8">
     <link rel="shortcut icon" href="public/rdos/favicon.png">
+    <script>
+        if (!!window.ActiveXObject || "ActiveXObject" in window) {
+            window.location.href = "/public/compatibility/tips.html"
+        }
+    </script>
     <base href="/" />
     <style type="text/css">
         .laoding-wrapper {
