--- a/engine-ui/packages/console-ui/src/public/main/index.html
+++ b/engine-ui/packages/console-ui/src/public/main/index.html
@@ -7,8 +7,8 @@
     <link rel="Shortcut Icon" href="public/favicon.png">
     <link rel="manifest" href="manifest.json">
     <script>
-        if (!!window.ActiveXObject || "ActiveXObject" in window){
-            window.location.href="/public/compatibility/tips.html"
+        if (/Edge\/|Trident\/|MSIE /.test(window.navigator.userAgent)) {
+            window.location.href = "/public/compatibility/tips.html"
         }
     </script>
     <base href="/" />
