--- a/engine-ui/packages/console-ui/src/public/rdos/index.html
+++ b/engine-ui/packages/console-ui/src/public/rdos/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <link rel="shortcut icon" href="public/rdos/favicon.png">
     <script>
-        if (!!window.ActiveXObject || "ActiveXObject" in window) {
+        if (/Edge\/|Trident\/|MSIE /.test(window.navigator.userAgent)) {
             window.location.href = "/public/compatibility/tips.html"
         }
     </script>
